# picow-freertos-tcp-server

./: .gitignore  CMakeLists.txt  download_dependencies.sh
client/: check_network.py  client_data.py  client_user_input.py  send_file.py  send_user_input.py
include/: FreeRTOSConfig.h  lwipopts.h  processing.h  tcp_server.h
src/: main.c  processing.c  tcp_server.c
